feat: new `or-only-on-booleans` rule

--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": [ "file.ts" ],
   "compilerOptions": {
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "strictNullChecks": true,
   }
 }
