--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@mixmaxhq/statsd-client": "^1.0.0",
     "@typescript-eslint/experimental-utils": "^4.32.0",
     "@typescript-eslint/typescript-estree": "^4.32.0",
+    "eslint-ast-utils": "^1.1.0",
     "tsutils": "^3.21.0"
   },
   "peerDependencies": {
